--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -1,9 +1,59 @@
-.main-menu{
+#menu{
   position: absolute;
   display: inline-block;
   list-style: none;
   vertical-align: top;
-  width: 200px;
+  width: 240px;
+  margin: 0;
+  padding: 20px 0 0 0;
+  background: rgba(201, 211, 211, .2);
+  position: fixed;
+  overflow: hidden;
+  height: 600px;
+}
+
+.main-menu{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.menu-item a:hover{
+  background: rgba(201, 211, 211, .3);
+  color: darkblue;
+}
+
+.menu-item:focus a{
+  color: red !important;
+}
+
+.menu-item a{
+  position: relative;
+  display: block;
+  padding: 5px 0 5px 30px;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+  color: blue;
+  font-family: "Proxima Nova";
+}
+
+.menu-item a span{
+  text-transform: none;
+}
+
+.menu-item:before,
+.submenu-item:before{
+  position: absolute;
+  display: inline-block;
+  left: 10px;
+  top: 6px;
+  margin-right: 5px;
+  font-size: 0.8em;
+  font-family: FontAwesome;
+  color: rgba(0, 0, 0, .3);
+  opacity: 0.5;
 }
 
 .main-menu .menu-item span{
@@ -11,7 +61,6 @@
   font-size: 0.8em;
   color: grey;
   opacity: 0.3;
-  transition: 1s;
   margin-left: 10px;
 }
 
@@ -30,26 +79,4 @@
 .submenu-item{
   position: relative;
   text-transform: uppercase;
-}
-
-.menu-item a span{
-  text-transform: none;
-}
-
-.menu-item a{
-  display: inline-block;
-  width: 100%;
-}
-
-.menu-item:before,
-.submenu-item:before{
-  position: absolute;
-  display: inline-block;
-  left: -15px;
-  top: 3px;
-  margin-right: 5px;
-  font-size: 0.8em;
-  font-family: FontAwesome;
-  color: rgba(0, 0, 0, .3);
-  opacity: 0.5;
 }
