--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -12,7 +12,8 @@
   height: 600px;
 }
 
-.main-menu{
+.mainMenu{
+  position: relative;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -25,7 +26,7 @@
 }
 
 .menu-item:focus a{
-  color: red !important;
+  color: #CC0066;
 }
 
 .menu-item a{
@@ -37,6 +38,10 @@
   outline: none;
   color: blue;
   font-family: "Proxima Nova";
+}
+
+.menu-item a strong{
+  font-weight: normal;
 }
 
 .menu-item a span{
@@ -56,7 +61,7 @@
   opacity: 0.5;
 }
 
-.main-menu .menu-item span{
+.mainMenu .menu-item span{
   display: inline-block;
   font-size: 0.8em;
   color: grey;
@@ -70,8 +75,8 @@
   list-style: none;
 }
 
-.main-menu .menu-item:hover span,
-.main-menu .menu-item:hover:before {
+.mainMenu .menu-item:hover span,
+.mainMenu .menu-item:hover:before {
     opacity: 1;
 }
 
@@ -79,4 +84,10 @@
 .submenu-item{
   position: relative;
   text-transform: uppercase;
+}
+
+#svgMenuTag{
+  position: fixed;
+  top: 0px;
+  left: 0px;
 }
